# bean

./: .gitignore  README.md  pyproject.toml
src/bean/: __init__.py  analyzer.py  cli.py  diff.py  render.py
