[project]
name = "bean-viz"
version = "0.0.1"
description = "Codebase visualizer for Python projects"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
bean = "bean.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bean"]
